mask detction feature is working properly

--- a/real-time-mask-detction.ipynb
+++ b/real-time-mask-detction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "source": [
     "from keras.models import load_model\n",
     "import cv2\n",
@@ -17,29 +17,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "source": [
     "# Iinialize Tkinter\n",
     "root = tkinter.Tk()\n",
     "root.withdraw()"
    ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "''"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 8
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "source": [
     "# Load trained deep learning model\n",
     "model = load_model('face-mask-image-classification-with-keras.h5')"
@@ -49,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "source": [
     "# Classifier to detect face-mask\n",
     "face_det_classifier=cv2.CascadeClassifier('haarcascade_frontalface_default.xml')"
@@ -59,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "source": [
     "# Capture video  for face scanning\n",
     "source=cv2.VideoCapture(0)"
@@ -69,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "source": [
     "# Dictionaries caontaing details of wearing mask and color of rectangle arund face.\n",
     "# Green for wearing and Red for not wearing face mask\n",
@@ -102,9 +91,9 @@
     "        cv2.rectangle(img,(x,y),(x+w,y+h),color_dict[label],2)\n",
     "        cv2.rectangle(img,(x,y-40),(x+w,y),color_dict[label],-1)\n",
     "        cv2.putText(img, labels_dict[label], (x, y-10),cv2.FONT_HERSHEY_SIMPLEX,0.8,(255,255,255),2)\n",
-    "\n",
     "        if (label == 1):\n",
-    "            messagebox.showwarning(' Access denied.')\n",
+    "            messagebox.showwarning(\"Access Denied\")\n",
+    "\n",
     "    cv2.imshow('Live scanning',img)\n",
     "    key=cv2.waitKey(1)\n",
     "    \n",
