--- a/real-time-mask-detction.ipynb
+++ b/real-time-mask-detction.ipynb
@@ -72,6 +72,10 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
+    "SUBJECT = \"Subject\"\n",
+    "TEXT = \"violeted Fece mask policy\"\n",
+    "\n",
+    "\n",
     "while(True):\n",
     "\n",
     "    ret, img=source.read()\n",
@@ -91,9 +95,14 @@
     "        cv2.rectangle(img,(x,y),(x+w,y+h),color_dict[label],2)\n",
     "        cv2.rectangle(img,(x,y-40),(x+w,y),color_dict[label],-1)\n",
     "        cv2.putText(img, labels_dict[label], (x, y-10),cv2.FONT_HERSHEY_SIMPLEX,0.8,(255,255,255),2)\n",
+    "        # If level = 1 then  it means wearing No mask and 0 means wearing mask\n",
     "        if (label == 1):\n",
     "            messagebox.showwarning(\"Access Denied\")\n",
-    "\n",
+    "            %run mail.py\n",
+    "            \n",
+    "        else:\n",
+    "            pass\n",
+    "            break\n",
     "    cv2.imshow('Live scanning',img)\n",
     "    key=cv2.waitKey(1)\n",
     "    \n",
