--- a/real-time-mask-detction.ipynb
+++ b/real-time-mask-detction.ipynb
@@ -6,22 +6,7 @@
    "source": [
     "from keras.models import load_model\n",
     "import cv2\n",
-    "import numpy as np\n",
-    "import tkinter\n",
-    "import tkinter as tk\n",
-    "from tkinter import messagebox\n",
-    "import smtplib"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "# Iinialize Tkinter\n",
-    "root = tkinter.Tk()\n",
-    "root.withdraw()"
+    "import numpy as np"
    ],
    "outputs": [],
    "metadata": {}
@@ -31,7 +16,7 @@
    "execution_count": null,
    "source": [
     "# Load trained deep learning model\n",
-    "model = load_model('face-mask-image-classification-with-keras_2.h5')"
+    "model = load_model('face-mask-image-classification-with-keras.h5')"
    ],
    "outputs": [],
    "metadata": {}
@@ -93,16 +78,16 @@
     "        cv2.putText(img, labels_dict[label], (x, y-10),cv2.FONT_HERSHEY_SIMPLEX,0.8,(255,255,255),2)\n",
     "        #If level = 1 then  it means wearing No mask and 0 means wearing mask\n",
     "        if (label == 1):\n",
-    "            messagebox.showwarning(\"Access Denied\")\n",
-    "            %run mail.py\n",
+    "            #messagebox.showwarning(\"Access Denied\")\n",
+    "            #%run mail.py\n",
     "            %run alert_notification.py\n",
-    "            %run alert_email.py\n",
+    "            #%run alert_email.py\n",
     "            \n",
     "            \n",
     "        else:\n",
     "            pass\n",
     "            break\n",
-    "    cv2.imshow('Live scanning',img)\n",
+    "    cv2.imshow('Live face scanning',img)\n",
     "    key=cv2.waitKey(1)\n",
     "    \n",
     "    if(key==27):\n",
