live image recorded and alerted through emails

--- a/real-time-mask-detction.ipynb
+++ b/real-time-mask-detction.ipynb
@@ -78,9 +78,11 @@
     "        cv2.putText(img, labels_dict[label], (x, y-10),cv2.FONT_HERSHEY_SIMPLEX,0.8,(255,255,255),2)\n",
     "        #If level = 1 then  it means wearing No mask and 0 means wearing mask\n",
     "        if (label == 1):\n",
+    "            img = cv2.imwrite('nomask.png',img)\n",
+    "            %run mail.py nomask.png\n",
     "            #messagebox.showwarning(\"Access Denied\")\n",
     "            #%run mail.py\n",
-    "            %run alert_notification.py\n",
+    "            #%run alert_notification.py\n",
     "            #%run alert_email.py\n",
     "            \n",
     "            \n",
